# game-trade-platform

./: 一点想法.docx
backend/: CMakeLists.txt
backend/include/: httplib.h  sqlite3.h
backend/src/: db.cpp  db.h  handlers.cpp  handlers.h  main.cpp  utils.cpp  utils.h
data/: game_trade.db
docs/: 区块链交易核心开发流程(1).docx  区块链任务清单.docx  我的任务步骤.docx  陈谊_基于区块链的交易和流通系统_计划书.doc
